--- a/BlazorCosmosDB/Client/Pages/Books.razor
+++ b/BlazorCosmosDB/Client/Pages/Books.razor
@@ -1,4 +1,4 @@
-﻿@page "/fetch-books"
+﻿@page "/Books"
 @inject HttpClient _http
 @inject NavigationManager _navigation
 @inject IJSRuntime _jsRuntime
