--- a/BlazorCosmosDB/Client/Shared/NavMenu.razor
+++ b/BlazorCosmosDB/Client/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetch-books">
+            <NavLink class="nav-link" href="Books">
                 <span class="oi oi-cloud" aria-hidden="true"></span> Fetch data CosmosDB
             </NavLink>
         </li>
