--- a/BlazorCosmosDB/Client/Pages/BookEditor.razor.css
+++ b/BlazorCosmosDB/Client/Pages/BookEditor.razor.css
@@ -1,4 +1,12 @@
-﻿.td-label {
+﻿:focus {
+    outline: none;
+}
+
+.td-label {
     width: 90px;
     vertical-align: middle;
+}
+
+.btn {
+    width: 130px;
 }
