--- a/BlazorCosmosDB/Client/Pages/Books.razor
+++ b/BlazorCosmosDB/Client/Pages/Books.razor
@@ -3,8 +3,8 @@
 @inject NavigationManager _navigation
 @inject IJSRuntime _jsRuntime
 
-<h1 style="color:darkgoldenrod">Art Gallery</h1>
-<h3><span class="oi oi-book"></span> Books</h3>
+<h3 style="color:darkgoldenrod">Books Collection</h3>
+<hr />
 @if (items == null) {
     <h6>@echo</h6>
 }
@@ -14,7 +14,6 @@ else {
             <tr>
                 <td>Title</td>
                 <td>Author</td>
-                <td>ISBN</td>
                 <td>Language</td>
                 <td>Year</td>
                 <td>Link</td>
@@ -22,22 +21,21 @@ else {
             </tr>
         </thead>
         <tbody>
-            @foreach (var i in items) {
+            @foreach (var b in items) {
                 <tr>
-                    <td>@i.Title</td>
-                    <td>@i.Author</td>
-                    <td>@i.ISBN</td>
-                    <td>@i.Language</td>
-                    <td>@i.Year</td>
+                    <td>@b.Title</td>
+                    <td>@b.Author</td>
+                    <td>@b.Language</td>
+                    <td>@b.Year</td>
                     <td>
-                        <span style="cursor:pointer;color:@LinkColor(i.Link);"
-                              @onclick="() => OpenLink(i.Link)">Moore...</span>
+                        <span style="cursor:pointer;color:@LinkColor(b.Link);"
+                              @onclick="() => OpenLink(b.Link)">Moore...</span>
                     </td>
                     <td nowrap>
                         <span style="cursor:pointer;color:goldenrod"
-                              @onclick="@(e => OnEdit(i.ISBN, i.Partition))" class="oi oi-pencil"></span>
+                              @onclick="@(e => OnEdit(b.ISBN, b.Partition))" class="oi oi-pencil"></span>
                         <span style="cursor:pointer;color:salmon"
-                              @onclick="@(e => OnDelete(i.ISBN))" class="oi oi-trash"></span>
+                              @onclick="@(e => OnDelete(b.ISBN))" class="oi oi-trash"></span>
                     </td>
                 </tr>
             }
@@ -50,13 +48,13 @@ else {
         </h6>
     }
     <hr />
-    <a href="BookEditor" style="font-size:16px;">Add Book</a>
+    <a href="BookEditor" style="font-size:16px;"><i class="oi oi-book"></i> Add Book</a>
 }
 
 @code {
-        List<Book> items;
-        string apiRoot = "api/books/";
-        string echo;
+    List<Book> items;
+    string apiRoot = "api/books/";
+    string echo;
 
     protected override async Task OnInitializedAsync()
     {
@@ -69,11 +67,13 @@ else {
         }
     }
 
-    void OnEdit(string id, string partition) {
+    void OnEdit(string id, string partition)
+    {
         _navigation.NavigateTo($"BookEditor/{id}/{partition}");
     }
 
-    void OnCreate() {
+    void OnCreate()
+    {
         _navigation.NavigateTo($"BookEditor/");
     }
 
