--- a/BlazorCosmosDB/Client/Pages/Books.razor
+++ b/BlazorCosmosDB/Client/Pages/Books.razor
@@ -3,6 +3,8 @@
 @inject NavigationManager _navigation
 @inject IJSRuntime _jsRuntime
 
+<!-- https://www.blazorspread.net -->
+
 <h3 style="color:darkgoldenrod">Books Collection</h3>
 <hr />
 @if (items == null) {
@@ -22,22 +24,22 @@ else {
         </thead>
         <tbody>
             @foreach (var b in items) {
-                <tr>
-                    <td>@b.Title</td>
-                    <td>@b.Author</td>
-                    <td>@b.Language</td>
-                    <td>@b.Year</td>
-                    <td>
-                        <span style="@LinkStyle(b.Link);"
-                              @onclick="() => OpenLink(b.Link)">Moore...</span>
-                    </td>
-                    <td nowrap>
-                        <span style="cursor:pointer;color:goldenrod"
-                              @onclick="@(e => OnEdit(b.ISBN, b.Partition))" class="oi oi-pencil"></span>
-                        <span style="cursor:pointer;color:salmon"
-                              @onclick="@(e => OnDelete(b.ISBN))" class="oi oi-trash"></span>
-                    </td>
-                </tr>
+            <tr>
+                <td>@b.Title</td>
+                <td>@b.Author</td>
+                <td>@b.Language</td>
+                <td>@b.Year</td>
+                <td>
+                    <span style="@LinkStyle(b.Link);"
+                          @onclick="() => OpenLink(b.Link)">Moore...</span>
+                </td>
+                <td nowrap>
+                    <span style="cursor:pointer;color:goldenrod"
+                          @onclick="@(e => OnEdit(b.ISBN, b.Partition))" class="oi oi-pencil"></span>
+                    <span style="cursor:pointer;color:salmon"
+                          @onclick="@(e => OnDelete(b.ISBN))" class="oi oi-trash"></span>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
@@ -60,7 +62,8 @@ else {
     {
         echo = "Queryinhg database...";
         try {
-            items = await _http.GetFromJsonAsync<List<Book>>(apiRoot);
+            var data = await _http.GetFromJsonAsync<List<Book>>(apiRoot);
+            items = data.OrderBy(_ => _.Title).ToList();
         }
         catch (Exception exception) {
             echo = "Exception: " + exception.Message;
@@ -99,7 +102,7 @@ else {
 
     async Task SeedData()
     {
-        echo = "Queryinhg database...";
+        echo = "Seeding database.collection...";
         try {
             items = await _http.GetFromJsonAsync<List<Book>>(apiRoot + "SeedData");
         }
