--- a/BlazorCosmosDB/Client/Pages/Books.razor
+++ b/BlazorCosmosDB/Client/Pages/Books.razor
@@ -13,7 +13,7 @@
     <h6>@echo</h6>
 }
 else {
-    <table class="table" style="font-family:Consolas">
+    <table class="table table-sm">
         <thead>
             <tr>
                 <td>Title</td>
